# TrafficLightEmulator

./: README.md
Demonstration of work/: TrafficLightEmulator.webm
TrafficLightEmulator-pj/: CMakeLists.txt  Makefile
TrafficLightEmulator-pj/Logger/: CMakeLists.txt  Makefile  cmake_install.cmake
TrafficLightEmulator-pj/Logger/src/: Logger.cpp  Logger.hpp
TrafficLightEmulator-pj/TrafficLight/: CMakeLists.txt  Makefile  cmake_install.cmake
TrafficLightEmulator-pj/TrafficLight/src/: TrafficLight.cpp  TrafficLight.hpp
TrafficLightEmulator-pj/TrafficLightEmulator/: CMakeLists.txt  Makefile  TrafficLightEmulator.cpp  cmake_install.cmake
TrafficLightEmulator-pj/TrafficLightFSM/: CMakeLists.txt  Makefile  cmake_install.cmake
TrafficLightEmulator-pj/TrafficLightFSM/src/: TrafficLightFSM.cpp  TrafficLightFSM.hpp
TrafficLightEmulator-pj/TrafficLightStates/: CMakeLists.txt  Makefile  cmake_install.cmake
TrafficLightEmulator-pj/TrafficLightStates/src/: AbstractState.cpp  AbstractState.hpp  StateGreenLight.cpp  StateGreenLight.hpp  StatePause.cpp  StatePause.hpp  StateRedLight.cpp  StateRedLight.hpp  StateYellowLight.cpp  StateYellowLight.hpp
